# Similarity-Based-CS

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  tests.yml
mid_term_presentation/: prez.aux  prez.bbl  prez.bcf  prez.fdb_latexmk  prez.fls  prez.nav  prez.out  prez.tex  prez.toc
mid_term_presentation copy/: prez.bbl  prez.blg  prez.fdb_latexmk  prez.fls  prez.out  prez.run.xml  prez.snm  prez.toc  similaritybasedcs.bib
mid_term_presentation_copy/: prez.aux  prez.bcf  prez.nav  prez.tex  unsupervised.tex
mid_term_report/: report.aux  report.blg  report.fdb_latexmk  report.fls  report.run.xml  report.tex  report.toc
sim_based_cs/: c_scores.py  notebook.ipynb
tests/: test_score.py
