[tool.poetry]
name = "similarity-based-cs"
version = "0.1.0"
description = ""
authors = ["FabioGadegbeku <fabio.gadegbeku.etu@univ-lille.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
pylint = "^3.0.2"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
